@@ -8,6 +8,7 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -213,7 +214,7 @@ public class AlterTableQuery implements Query {
 
     @Override
     public List<Object> getParameters() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
